[package]
name = "wasmbrot"
version = "0.1.0"
authors = ["Jiang Meng Liao <alexandre.liao@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
lto = "fat"
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
